# ody

./: .gitignore  AGENTS.md  Cargo.toml  README.md  add_capabilities.py  add_model_capabilities.py  add_provider_capabilities_imports.py  apply_footer_two_line.py  default.nix  deny.toml  fix_closing_braces.py  fix_model_capabilities.py  remove-ody-login-execution-plan.md  rustfmt.toml
agent-graph-store/: BUILD.bazel  Cargo.toml
agent-graph-store/src/: local.rs  store.rs
analytics/: BUILD.bazel  Cargo.toml
analytics/src/: accepted_lines.rs  analytics_capture.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
app-server/: BUILD.bazel  Cargo.toml  README.md
app-server-client/: BUILD.bazel  Cargo.toml  README.md
app-server-client/src/: lib.rs  remote.rs
app-server-daemon/: BUILD.bazel  Cargo.toml  README.md
app-server-daemon/src/: client.rs  lib.rs  managed_install.rs  managed_install_tests.rs  remote_control_client.rs  update_loop.rs
app-server-protocol/: BUILD.bazel  Cargo.toml
app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs
app-server-protocol/tests/: schema_fixtures.rs
app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
app-server-test-client/scripts/: live_elicitation_hold.sh
app-server-test-client/src/: lib.rs  main.rs  plugin_analytics_capture.rs  plugin_analytics_capture_tests.rs  plugin_analytics_mutation_smoke.rs  plugin_analytics_smoke.rs  request_user_input.rs  request_user_input_tests.rs
app-server-transport/: BUILD.bazel  Cargo.toml
app-server-transport/src/: lib.rs  outgoing_message.rs
app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  current_time.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  main_tests.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  models_refresh_worker.rs  models_refresh_worker_tests.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
apply-patch/: BUILD.bazel  Cargo.toml
apply-patch/src/: invocation.rs  lib.rs  main.rs  parser.rs  seek_sequence.rs  standalone_executable.rs  streaming_parser.rs
arg0/: BUILD.bazel  Cargo.toml
arg0/src/: lib.rs
backend-client/: BUILD.bazel  Cargo.toml
backend-client/src/: client.rs  lib.rs  types.rs
chatgpt/: BUILD.bazel  Cargo.toml  README.md
chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs  workspace_settings.rs
chatgpt/tests/: task_turn_fixture.json
cli/: BUILD.bazel  Cargo.toml
cli/examples/: chat_provider_smoke.rs
cli/src/: app_cmd.rs  debug_sandbox.rs  doctor.rs  exec_server_telemetry.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  sandbox_setup.rs  state_db_recovery.rs  wsl_paths.rs
cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  delete.rs  exec_server.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  providers.rs  sandbox_network_proxy.rs  update.rs
cloud-config/: BUILD.bazel  Cargo.toml
cloud-config/src/: backend.rs  bundle_loader.rs  cache.rs  cache_tests.rs  lib.rs  metrics.rs  service.rs  service_tests.rs  validation.rs
cloud-tasks/: BUILD.bazel  Cargo.toml
cloud-tasks-client/: BUILD.bazel  Cargo.toml
cloud-tasks-client/src/: http.rs
cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
cloud-tasks-mock-client/src/: mock.rs
cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
cloud-tasks/tests/: env_filter.rs
code-mode/: BUILD.bazel  Cargo.toml
code-mode/src/: lib.rs  service.rs  service_contract_tests.rs  service_stub.rs  service_tests.rs  service_v8.rs
config/: BUILD.bazel  Cargo.toml
config/examples/: generate-proto.rs  write-config-schema.rs
config/scripts/: generate-proto.sh
config/src/: cloud_config_bundle.rs  cloud_config_bundle_tests.rs  cloud_config_layers.rs  cloud_config_layers_tests.rs  config_layer_source.rs  config_requirements.rs  config_toml.rs  diagnostics.rs  fingerprint.rs  hook_config.rs  lib.rs  locale.rs  marketplace_edit.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  merge.rs  permissions_toml.rs  plugin_edit.rs  profile_toml.rs  requirements_exec_policy.rs  schema.rs  shell_auto_detect.rs  skills_config.rs  state.rs  strict_config.rs  strict_config_tests.rs  thread_config.rs  tui_keymap.rs  types.rs
context-fragments/: BUILD.bazel  Cargo.toml
context-fragments/src/: additional_context.rs  fragment.rs
core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.1-ody-max_prompt.md  gpt-5.2-ody_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_ody_prompt.md  prompt_with_apply_patch_instructions.md
core-api/: BUILD.bazel  Cargo.toml
core-api/src/: lib.rs
core-plugins/: BUILD.bazel  Cargo.toml
core-plugins/src/: app_mcp_routing.rs  app_mcp_routing_tests.rs  discoverable.rs  discoverable_tests.rs  installed_marketplaces.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_tests.rs  marketplace_upgrade.rs  plugin_bundle_archive.rs  provider.rs  provider_tests.rs  remote.rs  remote_bundle.rs  remote_legacy.rs  remote_tests.rs  startup_sync.rs  startup_sync_tests.rs  store.rs  store_tests.rs  test_support.rs  tool_suggest_metadata.rs
core-skills/: BUILD.bazel  Cargo.toml
core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils.rs  invocation_utils_tests.rs  lib.rs  loader.rs  loader_tests.rs  mention_counts.rs  model.rs  model_tests.rs  remote.rs  render.rs  root_loader.rs  service.rs  service_tests.rs  (+2 more)
(+2604 files in other folders)
