[package]
edition.workspace = true
license.workspace = true
name = "ody-agent-graph-store"
version.workspace = true

[lib]
name = "ody_agent_graph_store"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
ody-protocol = { workspace = true }
ody-state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
