[package]
name = "ody-app-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ody_app_server_protocol"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ody-experimental-api-macros = { workspace = true }
ody-protocol = { workspace = true }
ody-shell-command = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-path-uri = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
ts-rs = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
anyhow = { workspace = true }
ody-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
