[package]
name = "ody-app-server-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ody-app-server-protocol = { workspace = true }
ody-core = { workspace = true }
ody-otel = { workspace = true }
ody-protocol = { workspace = true }
ody-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = { workspace = true }
