load("//:defs.bzl", "ody_rust_crate")

ody_rust_crate(
    name = "app-server",
    crate_name = "ody_app_server",
    extra_binaries = [
        "//ody/bwrap:bwrap",
    ],
    extra_binaries_non_windows = [
        "//ody/cli:ody",
        "//ody/rmcp-client:test_stdio_server",
    ],
    integration_test_timeout = "long",
    test_shard_counts = {
        # Note app-server-all-test has a large number of integration tests, so
        # even a single shard can be quite slow. When there is a legitimate
        # test failure in a shard, it will still get run 3x in total, which
        # can cause us to exhaust our CI timeout if the shard happens to run
        # long. Using a higher shard count for app-server-all-test should help
        # mitigate this risk.
        "app-server-all-test": 16,
        "app-server-unit-tests": 8,
    },
    test_tags = ["no-sandbox"],
)
