[package]
name = "ody-apply-patch"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ody_apply_patch"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ody-exec-server = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-path-uri = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
ody-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
