[package]
name = "ody-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ody_arg0"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ody-apply-patch = { workspace = true }
ody-exec-server = { workspace = true }
ody-install-context = { workspace = true }
ody-sandboxing = { workspace = true }
ody-shell-escalation = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
ody-windows-sandbox = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
