[package]
name = "ody-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ody_arg0"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
# Enables the Windows restricted-token/elevated sandbox backend. Off by default
# so local dev builds skip compiling/linking the Windows sandbox crate; release
# / packaging builds for Windows must pass `--features windows-sandbox` for
# Windows sandbox execution to work at runtime.
windows-sandbox = ["dep:ody-windows-sandbox"]

[dependencies]
anyhow = { workspace = true }
ody-apply-patch = { workspace = true }
ody-exec-server = { workspace = true }
ody-install-context = { workspace = true }
ody-linux-sandbox = { workspace = true }
ody-sandboxing = { workspace = true }
ody-shell-escalation = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-home-dir = { workspace = true }
ody-windows-sandbox = { workspace = true, optional = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
