[package]
name = "ody-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ody-backend-openapi-models = { path = "../ody-backend-openapi-models" }
ody-api = { workspace = true }
ody-client = { workspace = true }
ody-login = { workspace = true }
ody-model-provider = { workspace = true }
ody-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
