load("//:defs.bzl", "MACOS_WEBRTC_RUSTC_LINK_FLAGS", "ody_rust_crate")
load("//bazel/platforms:release_binaries.bzl", "multiplatform_binaries")

ody_rust_crate(
    name = "cli",
    crate_name = "ody_cli",
    extra_binaries = [
        "//ody-rs/bwrap:bwrap",
    ],
    rustc_flags_extra = MACOS_WEBRTC_RUSTC_LINK_FLAGS,
)

multiplatform_binaries(
    name = "ody",
)
