[package]
name = "ody-cloud-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ody-backend-client = { workspace = true }
ody-config = { workspace = true }
ody-core = { workspace = true }
ody-login = { workspace = true }
ody-otel = { workspace = true }
ody-protocol = { workspace = true }
hmac = "0.12.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
ody-agent-identity = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }

[lib]
doctest = false
