
[package]
edition.workspace = true
license.workspace = true
name = "ody-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "ody_cloud_tasks_mock_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
ody-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
