[package]
edition.workspace = true
license.workspace = true
name = "ody-cloud-tasks"
version.workspace = true

[lib]
name = "ody_cloud_tasks"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
ody-client = { workspace = true }
ody-cloud-tasks-client = { workspace = true }
# TODO: ody-cloud-tasks-mock-client should be in dev-dependencies.
ody-cloud-tasks-mock-client = { workspace = true }
ody-core = { workspace = true }
ody-git-utils = { workspace = true }
ody-login = { path = "../login" }
ody-model-provider = { workspace = true }
ody-tui = { workspace = true }
ody-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
