[package]
edition.workspace = true
license.workspace = true
name = "ody-code-mode"
version.workspace = true

[lib]
doctest = false
name = "ody_code_mode"
path = "src/lib.rs"

[features]
# The V8 JS runtime is OFF by default: local dev builds (`cargo build` /
# `cargo test`) skip compiling and statically linking V8 entirely, and
# `CodeModeService` degrades to a stub that returns a clear error. Release
# / packaging builds must enable this feature (e.g.
# `cargo build -p ody-cli --release --features v8`).
v8 = ["dep:v8", "dep:deno_core_icudata"]
sandbox = ["v8", "v8/v8_enable_sandbox"]

[lints]
workspace = true

[dependencies]
ody-code-mode-protocol = { workspace = true }
ody-protocol = { workspace = true }
deno_core_icudata = { workspace = true, optional = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
v8 = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
